--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
-    "express": "^4.14.0",
-    "express-systemjs-translate": "^5.0.0"
+    "express": "^4.14.0"
   },
   "devDependencies": {
     "jspm": "^0.16.46"
@@ -18,6 +17,7 @@
   "license": "ISC",
   "jspm": {
     "dependencies": {
+      "jsx": "npm:jspm-loader-jsx@^0.0.7",
       "react": "npm:react@^15.3.2",
       "react-dom": "npm:react-dom@^15.3.2"
     },
