included mocha chai libs on package.json and added test dir with one placeholder spec

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "express": "^4.14.0"
   },
   "devDependencies": {
-    "jspm": "^0.16.46"
+    "chai": "^3.5.0",
+    "jspm": "^0.16.46",
+    "mocha": "^3.1.2"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+  "scripts": {    
+    "start": "nodemon server.js",
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
